# docxcompose3

./: .gitignore  HISTORY.txt  README.rst  pyproject.toml
docxcompose3/: command.py  composer.py  properties.py  sdt.py
tests/: test_command.py  test_content_controls.py  test_fields.py  test_header.py  test_numberings.py  test_properties.py  test_styles.py  utils.py
