[project]
name = "docxcompose3"
version = "1.4.5"
description = "Compose .docx documents (fork to work with newer setuptools)"
requires-python = ">=3.8"
license = { text = "MIT License" }
dynamic = ["readme"]

authors = [
  { name = "Thomas Buchberger", email = "t.buchberger@4teamwork.ch" },
]
maintainers = [
  { name = "Emmanuel Viennet" },
  { name = "Matthew Huisman" },
]

keywords = ["Python", "DOCX", "Word", "OOXML"]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "lxml",
  "python-docx>=0.8.8",
  "six",
  "Babel",
]

[project.optional-dependencies]
test = ["pytest"]

[project.scripts]
docxcompose = "docxcompose.command:main"

[project.urls]
Homepage = "https://github.com/matthuisman/docxcompose3"
Repository = "https://github.com/matthuisman/docxcompose3"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
readme = { file = ["README.rst", "HISTORY.txt"], content-type = "text/x-rst" }
